--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -2,6 +2,9 @@
   text-align: center;
   font-family: 'Inter', sans-serif;
   padding: 6rem;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .App-logo {
