--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -5,6 +5,10 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background: radial-gradient(ellipse at center,  #dfd8c5 0%,#FAF9F6 100%);
 }
 
 .App-logo {
