--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -11,10 +11,18 @@
   background: radial-gradient(ellipse at center, #9c9889 0%,#FAF9F6 100%);
 }
 
+#tsparticles {
+     position: absolute;
+     left: 0;
+     top: 0;
+     z-index: 0;
+}
+
 .section {
   border-radius: 1%;
   padding: 20px;
   border: 0.2px solid rgba(0, 0, 0, 0);
+  z-index: 1;
 }
 
 .section:hover {
